MDL-52936 theme_bootstrapbase: Fix link hover bug on iOS

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -1110,7 +1110,7 @@ tr.flagged-tag a {
     float: right;
     padding: 3px;
     margin: 3px;
-    > *:hover {
+    > a:hover {
         border-bottom:1px solid #666;
     }
 }
